Really finalized a lot of little things that were bugging me.  Centered text in the buttons at small window sizes.  Improved visibility of text overall.  Added a fun animation to clear scores button.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,10 @@ body {
 	background-color:gold;
 }
 
-#timer {
+a, #timer {
 	font-family: 'Source Code Pro', sans-serif;
+	font-weight: 900;
+	color: black;
 }
 
 main {
@@ -133,14 +135,34 @@ header::after {
 	font-weight: 700;
 }
 
-#scoreModal .modal-body {
+.modal-body {
 	background-color: gold;
 	padding: 0;
+	text-align: center;
+}
+
+#initial-input {
+	text-align: center;
+	padding-top: 10px;
+	margin: 10px 0 10px 0;
+	font-family: 'Baloo Tammudu 2', cursive;
+	font-weight: 700;
+	background-color:  #dddddd;
+	font-size: 20px;
 }
 
 .modal-footer {
 	border-top: 10px solid rgb(86, 10, 38);
 	background-color: rgb(62, 255, 62);
+}
+
+.modalBtn {
+	background-color:rgb(154, 154, 154);
+	font-family: 'Baloo Tammudu 2', cursive;
+	border: 2px solid rgb(86, 10, 38);
+	font-weight: 900;
+	padding-bottom: 0px;
+	padding-top: 8px;
 }
 
 table {
@@ -154,12 +176,13 @@ td, th {
 	text-align: center;
 	padding: 8px;
 	padding-top:20px;
+	font-size: 20px;
 }
 
 th {
 	font-weight: 900;
 	background-color: aqua;
-	font-size:20px;
+	font-size: 25px;
 }
 
 
